Add banner image in WebP format and update reference in index.html

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
             <!-- Hero Image -->
             <div class="hero-section">
-                <img src="https://raw.githubusercontent.com/TeamPentagon/TeamPentagon.github.io/refs/heads/main/banner.png"
+                <img src="https://raw.githubusercontent.com/TeamPentagon/TeamPentagon.github.io/refs/heads/main/banner.webp"
                     alt="Team Pentagon Collaboration">
                 <div class="hero-overlay">
                     <div style="font-family: 'JetBrains Mono'; font-size: 12px; color: var(--accent-primary);">
